syntax = "proto3";

package obiente.cloud.auth.v1;

option go_package = "api/gen/proto/obiente/cloud/auth/v1;authv1";

import "google/protobuf/timestamp.proto";

service AuthService {
  // Get current authenticated user
  rpc GetCurrentUser(GetCurrentUserRequest) returns (GetCurrentUserResponse);
}

// Empty request for getting current user
message GetCurrentUserRequest {}

message GetCurrentUserResponse {
  User user = 1;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string avatar_url = 4;
  google.protobuf.Timestamp created_at = 5;
  string timezone = 6;
  // Extended Zitadel userinfo fields
  string given_name = 7;
  string family_name = 8;
  string preferred_username = 9;
  bool email_verified = 10;
  string locale = 11;
  google.protobuf.Timestamp updated_at = 12;
  repeated string roles = 13;
}